@@ -599,6 +599,7 @@ class AppController < NSObject
     handler(:right, :cmd, :alt) { move(:right, :active); true }
     handler(:tab, :ctrl) { move(:down, :unread); true }
     handler(:tab, :ctrl, :shift) { move(:up, :unread); true }
+    handler(:tab, :alt) { @world.select_prev; true }
     handler(:space, :alt) { move(:down, :unread); true }
     handler(:space, :alt, :shift) { move(:up, :unread); true }
     handler('0'..'9', :cmd) {|n| @world.select_channel_at(n.to_s.to_i); true }
