@@ -1,5 +1,9 @@
 2008-07-28  Satoshi Nakagawa <psychs@limechat.net>
 
+    Assigned opt+tab to move to the last selected channel.
+
+2008-07-28  Satoshi Nakagawa <psychs@limechat.net>
+
 	Updated GrowlNotifier.
 
 2008-07-24  Satoshi Nakagawa <psychs@limechat.net>
